--- a/src/main/resources/view/orderForm.fxml
+++ b/src/main/resources/view/orderForm.fxml
@@ -65,5 +65,11 @@
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
+      <JFXTextField fx:id="txtOrderId" layoutX="363.0" layoutY="457.0" prefHeight="25.0" prefWidth="84.0" />
+      <Label layoutX="295.0" layoutY="467.0" text="Order ID :">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
